--- a/style.css
+++ b/style.css
@@ -1,2 +1,67 @@
 @charset "UTF-8";
 
+/* Paleta de cores:
+#D98032 - laranja
+#F2B591 - bege
+#D9663D - laranja claro
+#731702 - carmesim
+#400101 - marrom escuro ou tom bordô
+*/
+
+:root {
+    --cor01: #D98032;
+    --cor02: #F2B591;
+    --cor03: #D9663D;
+    --cor04: #731702;
+    --cor05: #400101;
+}
+
+* {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+
+    /* config para fazer com que a borda faça parte das contas */
+}
+
+body, html {
+    background-color: var(--cor01);
+    height: 100vh;
+    width: 100vw;
+    background-image: url(imagens/pattern01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+main {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    
+}
+
+#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    color: white;
+    width: 250px;
+    height: 3000px; 
+    border-radius: 10px;
+    border: 1px solid white;
+    overflow: hidden;
+    /* essa config de overflow hidden é para esconder tudo que estiver fora da borda */
+}
+
+#login #imagem {
+    background: url(imagens/pattern01.jpg);
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    
+}
