--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@
     /* config para fazer com que a borda faça parte das contas */
 }
 
+
 body, html {
-    background-color: black;
+    background-image: linear-gradient(to bottom, black, #731702, #400101);
     height: 100vh;
     width: 100vw;
    
