--- a/mq.css
+++ b/mq.css
@@ -21,7 +21,7 @@
     
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1101px) {
     #login {
         width: 650px;
 
@@ -35,8 +35,8 @@
 
     #login #form {
         float: right;
-        width: 650px;
         text-align: center;
+        width: 50%;
     }
 }
 
