--- a/mq.css
+++ b/mq.css
@@ -2,7 +2,7 @@
 
 @media screen and (min-width: 768px) and (max-width:1100px) {
     #login {
-        width: 60%;
+        width: 60vw;
 
     }
 
@@ -35,8 +35,8 @@
 
     #login #form {
         float: right;
-        text-align: center;
         width: 50%;
+        text-align: center;
     }
 }
 
