--- a/mq.css
+++ b/mq.css
@@ -3,7 +3,7 @@
 @media screen and (min-width: 768px) and (max-width:1100px) {
     #login {
         width: 60vw;
-
+        height: 300px;
     }
 
     #login #imagem {
