--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --cor05: #400101;
 }
 
+/* toda as transform que eu fizer, faça na última linha, porque evita vários bugs */
+
 * {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
@@ -43,8 +45,7 @@ main {
 #login {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%;   
     background-color: white;
     width: 250px;
     height: 500px; 
@@ -52,6 +53,7 @@ main {
     border: 1px solid var(--cor03);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.329);
+    transform: translate(-50%, -50%);
     /* essa config de overflow hidden é para esconder tudo que estiver fora da borda */
 }
 
@@ -71,6 +73,69 @@ main {
     text-align: center;
 }
 
+form > .campo {
+    background-color: #400101;
+    display: block;
+    height: 40px;
+    width: 100%;
+    margin: 5px 0px;
+    border-radius: 5px;
+}
+
+.campo span {
+    color: white;
+    padding: 5px;
+    height: 100%;
+}
+
+.campo input {
+    border-radius: 5px;
+    border: none;
+    width: calc(100% - 45px);
+    /* calc é uma funcao de css pra ser algo mais preciso */
+    height: 90%;
+    transform: translateY(-3.89px);
+}
+
 #form h1 {
     margin: 10px;
+}
+
+form input[type=submit] {
+    display: block;
+    width: 50%;
+    height: 30px;
+    background-color: black;
+    border: none;
+    border-radius: 5px;
+    margin: auto;
+    cursor: pointer;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+form input[type=submit]:hover {
+    background-color: #731702;
+    
+}
+
+form .botao {
+    display: block;
+    width: 50%;
+    margin: auto;
+    background-color: black;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    height: 30px;
+    padding-top: 5px;
+    font-size: 0.8em;
+
+}
+
+form .botao:hover {
+    background-color: var(--cor04);
+
 }
